code cleanups in the factory